--- a/css/style.css
+++ b/css/style.css
@@ -1,670 +1,718 @@
 /*Обнуление*/
-*{padding: 0;margin: 0;border: 0;}
-*,*:before,*:after{-moz-box-sizing: border-box;-webkit-box-sizing: border-box;box-sizing: border-box;}
-:focus,:active{outline: none;}
-a:focus,a:active{outline: none;}
-nav,footer,header,aside{display: block;}
-html,body{height:100%;width:100%;font-size:100%;line-height:1;font-size:14px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
-input,button,textarea{font-family:inherit;}
-input::-ms-clear{display: none;}
-button{cursor: pointer;}
-button::-moz-focus-inner {padding:0;border:0;}
-a,a:visited{text-decoration: none;}
-a:hover{text-decoration: none;}
-ul li{list-style: none;}
-img{vertical-align: top;}
-h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
+* {
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+
+*, *:before, *:after {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+:focus, :active {
+    outline: none;
+}
+
+a:focus, a:active {
+    outline: none;
+}
+
+nav, footer, header, aside {
+    display: block;
+}
+
+html, body {
+    height: 100%;
+    width: 100%;
+    font-size: 100%;
+    line-height: 1;
+    font-size: 14px;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+
+input, button, textarea {
+    font-family: inherit;
+}
+
+input::-ms-clear {
+    display: none;
+}
+
+button {
+    cursor: pointer;
+}
+
+button::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+}
+
+a, a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+ul li {
+    list-style: none;
+}
+
+img {
+    vertical-align: top;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-size: inherit;
+    font-weight: inherit;
+}
+
 /*--------------------*/
 
-body{
-	font-family: 'Raleway', sans-serif;
-	color: #515369;
-	margin: 0;
-	-webkit-font-smoothing: antialiased;
+body {
+    font-family: 'Raleway', sans-serif;
+    color: #515369;
+    margin: 0;
+    -webkit-font-smoothing: antialiased;
 
 }
 
-h1,h2,h3,h4,h5,h6{
-	margin: 0;
-	font-weight: 700;
-}
-*{
-	box-sizing: border-box;
-}
-p{
-	margin: 0 0 10px 0;
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    font-weight: 700;
 }
 
-.nav{
-	font-size: 13px;
-	font-weight: 700;
-	text-transform: uppercase;
-	display: flex;
-
+* {
+    box-sizing: border-box;
 }
 
-.nav__link:first-child{
-	margin-left: 0;
+p {
+    margin: 0 0 10px 0;
 }
 
-
-.nav__link{
-	color: #fff;
-	text-decoration: none;
-	opacity: 0.75;
-	margin-left: 50px;
-
-}
-.nav__link:hover{
-	opacity: 1;
-}
-.container{
-	width: 100%;
-	max-width: 1200px;
-	margin: 0 auto;
-	padding: 0 15px;
+.nav {
+    font-size: 13px;
+    font-weight: 700;
+    text-transform: uppercase;
+    display: flex;
 
 }
 
-.header{
-
-	width: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 100;
-	height: 100px;
-
-}
-.header.fixed{
-	height: auto;
-	position: fixed;
-	background-color: #2b2e49;
-}
-
-.header.fixed .header__inner{
-
-	padding-top: 15px;
-	padding-bottom: 15px;
-	border-bottom: 1px solid ##2b2e49;
-}
-
-.header__inner{
-	display: flex;
-	justify-content: space-between;
-	border-bottom: 1px solid ##2b2e49;
-	padding: 35px 0;
-	align-items: center;
-
-}
-
-.intro{
-	height: 750px;
-	background: url(../img/Layer_34.jpg) center no-repeat;
-	padding-top: 100px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	color: #fff;
-
-}
-
-.intro__title{
-	font-family: 'Open Sans', sans-serif;
-	font-size: 65px;
-	line-height: 1.1;
-	font-weight: 700;
-	margin: 0;
-	text-transform: uppercase;
-	text-align: center;
-	margin: 0 0 30px;
-}
-
-.intro__inner{
-	width: 100%;
-	max-width: 970px;
-	margin: 0 auto;
-	text-align: center;
-
-}
-
-.intro__subtittle{
-	font-size: 22px;
-	line-height: 1.5;
-	font-weight: 400;
-	margin-bottom: 60px;
-}
-
-.btn{
-	display: inline-block;
-	vertical-align: top;
-	font-size: 13px;
-	font-weight: 600;
-	text-transform: uppercase;
-	text-decoration: none;
-	padding: 14px 40px;
-	border-radius: 2px;
-	font-family: inherit;
-	color: #fff;
-	border: 1px;
-	text-shadow: 3px;
-
-}
-
-.btn--red{
-	background-color: #e84545;
+.nav__link:first-child {
+    margin-left: 0;
 }
 
 
-.btn--red:hover{
-	background-color: #dd3434;
+.nav__link {
+    color: #fff;
+    text-decoration: none;
+    opacity: 0.75;
+    margin-left: 50px;
 
 }
 
-.btn--long{
-	min-width: 280px;
+.nav__link:hover {
+    opacity: 1;
+}
+
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+
+}
+
+.header {
+
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    height: 100px;
+
+}
+
+.header.fixed {
+    height: auto;
+    position: fixed;
+    background-color: #2b2e49;
+}
+
+.header.fixed .header__inner {
+
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid # #2b2e49;
+}
+
+.header__inner {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid # #2b2e49;
+    padding: 35px 0;
+    align-items: center;
+
+}
+
+.intro {
+    height: 750px;
+    background: url(../img/Layer_34.jpg) center no-repeat;
+    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #fff;
+
+}
+
+.intro__title {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 65px;
+    line-height: 1.1;
+    font-weight: 700;
+    margin: 0;
+    text-transform: uppercase;
+    text-align: center;
+    margin: 0 0 30px;
+}
+
+.intro__inner {
+    width: 100%;
+    max-width: 970px;
+    margin: 0 auto;
+    text-align: center;
+
+}
+
+.intro__subtittle {
+    font-size: 22px;
+    line-height: 1.5;
+    font-weight: 400;
+    margin-bottom: 60px;
+}
+
+.btn {
+    display: inline-block;
+    vertical-align: top;
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 14px 40px;
+    border-radius: 2px;
+    font-family: inherit;
+    color: #fff;
+    border: 1px;
+    text-shadow: 3px;
+
+}
+
+.btn--red {
+    background-color: #e84545;
 }
 
 
-.features{
-	display: flex;
-	margin: 100px 0;
-	flex-wrap: wrap;
+.btn--red:hover {
+    background-color: #dd3434;
+
 }
 
-.features__item{
-	width: 33.333%;
-	text-align: center;
-	padding: 0 40px;
-	margin: 25px 0;
-}
-
-.features__icons{
-	margin-bottom: 25px;
-}
-
-.feature__title{
-	font-size: 14px;
-	color: #2d3033;
-	font-weight: 700;
-	text-transform: uppercase;
-	margin-bottom: 20px;
-}
-
-.features__text{
-	font-size: 14px;
-	line-height: 1.5;
-	color: #6c7279;
+.btn--long {
+    min-width: 280px;
 }
 
 
+.features {
+    display: flex;
+    margin: 100px 0;
+    flex-wrap: wrap;
+}
+
+.features__item {
+    width: 33.333%;
+    text-align: center;
+    padding: 0 40px;
+    margin: 25px 0;
+}
+
+.features__icons {
+    margin-bottom: 25px;
+}
+
+.feature__title {
+    font-size: 14px;
+    color: #2d3033;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+
+.features__text {
+    font-size: 14px;
+    line-height: 1.5;
+    color: #6c7279;
+}
 
 
 .works {
-	display: flex;
-	flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 
 .works__item {
-	width: 25%;
-	height: 350px;
-	position: relative;
-	overflow: hidden;
-	border-bottom: 1px solid #fff;
-	border-right: 1px solid #fff;
+    width: 25%;
+    height: 350px;
+    position: relative;
+    overflow: hidden;
+    border-bottom: 1px solid #fff;
+    border-right: 1px solid #fff;
 }
-.works__foto{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	z-index: 1;
-	transform: translate3d(-50%, -50%, 0);
+
+.works__foto {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    transform: translate3d(-50%, -50%, 0);
 }
 
 
 .works__content {
-	width: 100%;
-	height: 100%;
-	background-color: rgba(232,69,69,.9);
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	text-align: center;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 2;
-	opacity: 0;
-	transition: opacity 0.2s linear;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(232, 69, 69, .9);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    opacity: 0;
+    transition: opacity 0.2s linear;
 }
 
 
 .works__title {
-	font-size: 14px;
-	font-weight: 700;
-	color: #fff;
-	text-transform: uppercase;
-	margin-bottom: 5px;
+    font-size: 14px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
+    margin-bottom: 5px;
 }
 
 
 .works__text {
-	font-size: 14px;
-	color: #fff;
+    font-size: 14px;
+    color: #fff;
 }
 
-.works__item:hover .works__content
-{
-	opacity: 1;
-
-}
-
-.team{
-	margin: 100px 0 70px;
-}
-
-.team__inner{
-	display: flex;
-	flex-wrap: wrap;
-	margin: 0 -15px;
-}
-
-.team__item{
-	width: 25%;
-	padding: 0 15px;
-	margin-bottom: 30px;
-}
-
-.team_photo{
-
-	display: block;
-	max-width: 100%;
-	height: auto;
-	margin-bottom: 20px;
-}
-
-.team__name{
-	margin-bottom: 8px;
-
-	font-size: 22px;
-	color: #2d3033;
-}
-
-.team__prof{
-	font-size: 13px;
-	color: #e84545;
-	text-transform: uppercase;
-	margin-bottom: 15px;
-}
-
-.team__text{
-	font-size: 14px;
-	color: #6c7279;
-	line-height: 1.5;
-	margin-bottom: 20px;
-}
-
-.social{
-	display: flex;
-}
-
-.social--footer{
-
-	justify-content: center;
+.works__item:hover .works__content {
+    opacity: 1;
 
 }
 
-
-.social__item{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 40px;
-	height: 40px;
-	border: 1px solid #e8ecee;
-	margin-right: 4px;
-	background-color: #fff;
-	transition: background .2s
-	linear;
+.team {
+    margin: 100px 0 70px;
 }
 
-
-.social__item:hover{
-	background-color: #e8ecee;
+.team__inner {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
 }
 
-.social__item:hover .social__icon{
-	fill: #000;
+.team__item {
+    width: 25%;
+    padding: 0 15px;
+    margin-bottom: 30px;
+}
+
+.team_photo {
+
+    display: block;
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+.team__name {
+    margin-bottom: 8px;
+
+    font-size: 22px;
+    color: #2d3033;
+}
+
+.team__prof {
+    font-size: 13px;
+    color: #e84545;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+}
+
+.team__text {
+    font-size: 14px;
+    color: #6c7279;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+.social {
+    display: flex;
+}
+
+.social--footer {
+
+    justify-content: center;
 
 }
 
 
-.social--footer .social__item{
-	background-color: transparent;
-	border-width: 2px;
-	border-color: #fff;
-	border-radius: 2px;
-}
-
-.social--footer .social__item:hover{
-	background-color: #fff;
-}
-
-.social--footer .social__icon{
-	fill: #fff;
+.social__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border: 1px solid #e8ecee;
+    margin-right: 4px;
+    background-color: #fff;
+    transition: background .2s linear;
 }
 
 
-.social__icon{
-	display: block;
-	height: 18px;
+.social__item:hover {
+    background-color: #e8ecee;
+}
 
-	fill: #c6cacc;
-	transition: fill .2s linear;
+.social__item:hover .social__icon {
+    fill: #000;
+
 }
 
 
-
-
-
-
-.reviews{
-	overflow: hidden;
-	background-color: #53354a;
+.social--footer .social__item {
+    background-color: transparent;
+    border-width: 2px;
+    border-color: #fff;
+    border-radius: 2px;
 }
 
-.reviews__slider{
-	height: 500px;
-	overflow: hidden;
+.social--footer .social__item:hover {
+    background-color: #fff;
+}
+
+.social--footer .social__icon {
+    fill: #fff;
 }
 
 
+.social__icon {
+    display: block;
+    height: 18px;
 
-.reviews__item{
-	display: flex;
-	flex-wrap: wrap;
+    fill: #c6cacc;
+    transition: fill .2s linear;
+}
+
+
+.reviews {
+    overflow: hidden;
+    background-color: #53354a;
+}
+
+.reviews__slider {
+    height: 500px;
+    overflow: hidden;
+}
+
+
+.reviews__item {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 
 .reviews__photo {
-	width: 50%;
-	height: 500px;
-	position: relative;
+    width: 50%;
+    height: 500px;
+    position: relative;
 }
 
-.reviews__img{
+.reviews__img {
 
-	position: absolute;
-	top: 50%;
-	right: 0;
-	z-index: 1;
-	transform: translateY(-50%);
+    position: absolute;
+    top: 50%;
+    right: 0;
+    z-index: 1;
+    transform: translateY(-50%);
 }
 
 .reviews__content {
-	width: 50%;
-	padding-left: 80px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
+    width: 50%;
+    padding-left: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
 }
 
-.reviews__text{
-	font-family: 'Cardo', sans-serif;
-	font-style: italic;
-	font-size: 36px;
-	line-height: 1.2;
-	color: #fff;
-	margin-bottom: 25px;
+.reviews__text {
+    font-family: 'Cardo', sans-serif;
+    font-style: italic;
+    font-size: 36px;
+    line-height: 1.2;
+    color: #fff;
+    margin-bottom: 25px;
 }
 
-.reviews__autor{
-	font-size: 13px;
-	font-weight: 700;
-	text-transform: uppercase;
-	color: #fff;
+.reviews__autor {
+    font-size: 13px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #fff;
 
 }
 
-.slick-dots{
-	display: flex;
-	justify-content: center;
-	width: 50%;
-	margin: 0;
-	padding: 0 0 10px;
-	letter-spacing: none;
+.slick-dots {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+    margin: 0;
+    padding: 0 0 10px;
+    letter-spacing: none;
 
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	z-index: 2;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
 }
 
-.slick-dots li{
-	margin: 0 5px;
+.slick-dots li {
+    margin: 0 5px;
 }
 
-.slick-dots button{
-	width: 15px;
-	height: 15px;
-	background:#fff;
-	border-radius: 50%;
-	border: 0;
-	padding: 0;
-	font-size: 0;
-	color: transparent;
-	opacity: 0.5;
+.slick-dots button {
+    width: 15px;
+    height: 15px;
+    background: #fff;
+    border-radius: 50%;
+    border: 0;
+    padding: 0;
+    font-size: 0;
+    color: transparent;
+    opacity: 0.5;
 }
 
-.slick-dots .slick-active button{
-	opacity: 1;
+.slick-dots .slick-active button {
+    opacity: 1;
 }
 
 .download {
-	margin: 90px 0;
-	text-align: center;
+    margin: 90px 0;
+    text-align: center;
 
 }
 
 
-.container {}
+.container {
+}
 
 
 .download__title {
-	font-size: 28px;
-	color: #2d3033;
-	font-weight: 300;
-	margin-bottom: 10px;
+    font-size: 28px;
+    color: #2d3033;
+    font-weight: 300;
+    margin-bottom: 10px;
 }
 
 
 .download__text {
-	font-weight: 700;
-	font-size: 13px;
-	color: #2d3033;
-	text-transform: uppercase;
-	margin-bottom: 30px;
+    font-weight: 700;
+    font-size: 13px;
+    color: #2d3033;
+    text-transform: uppercase;
+    margin-bottom: 30px;
 }
-
-
-
 
 
 .footer {
 
-	background-color: #3a3e64;
+    background-color: #3a3e64;
 }
 
 
-.container {}
+.container {
+}
 
 
 .footer__inner {
-	display: flex;
-	flex-wrap: wrap;
-	padding: 70px 0;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 70px 0;
 }
 
 
 .footer__block {
-	width: 33.333%;
-	text-align: center;
-	padding: 0 15px;
+    width: 33.333%;
+    text-align: center;
+    padding: 0 15px;
 }
 
-.footer_title{
-	color: #fff;
-	text-transform: uppercase;
-	font-size: 14px;
-	font-weight: 700;
-	margin-bottom: 10px;
+.footer_title {
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
+    margin-bottom: 10px;
 }
 
-.footer__adress{
+.footer__adress {
 
-	color: rgba(255,255,255, .5);
-	font-style: normal;
-	font-size: 14px;
-	line-height: 1.5;
-}
-
-
-.footer__text{
-	color: rgba(255,255,255, .5);
-	font-style: normal;
-	font-size: 14px;
-	line-height: 1.5;
+    color: rgba(255, 255, 255, .5);
+    font-style: normal;
+    font-size: 14px;
+    line-height: 1.5;
 }
 
 
-.copyyright{
-	background-color: #313454;
-	padding: 20px 0;
-}
-
-.copyyright__text{
-	text-align: center;
-	font-size: 14px;
-	color: #808080;
-	line-height: 1.5;
-}
-
-.copyyright__text span{
-	color: #fff;
+.footer__text {
+    color: rgba(255, 255, 255, .5);
+    font-style: normal;
+    font-size: 14px;
+    line-height: 1.5;
 }
 
 
+.copyyright {
+    background-color: #313454;
+    padding: 20px 0;
+}
 
+.copyyright__text {
+    text-align: center;
+    font-size: 14px;
+    color: #808080;
+    line-height: 1.5;
+}
+
+.copyyright__text span {
+    color: #fff;
+}
 
 
 .burger {
-	display: none;
-	padding: 10px 3px;
+    display: none;
+    padding: 10px 3px;
 
-	background: none;
-	border: 0;
-	cursor: pointer;
+    background: none;
+    border: 0;
+    cursor: pointer;
 }
 
 .burger__item {
-	display: block;
-	width: 28px;
-	height: 3px;
+    display: block;
+    width: 28px;
+    height: 3px;
 
-	background-color: #fff;
+    background-color: #fff;
 
-	font-size: 0;
-	color: transparent;
+    font-size: 0;
+    color: transparent;
 
-	position: relative;
+    position: relative;
 }
 
 .burger__item:before,
 .burger__item:after {
-	content: "";
-	height: 100%;
+    content: "";
+    height: 100%;
 
-	background-color: #fff;
+    background-color: #fff;
 
-	position: absolute;
-	right: 0;
-	z-index: 1;
+    position: absolute;
+    right: 0;
+    z-index: 1;
 }
 
 .burger__item:before {
-	width: 30px;
-	top: -8px;
+    width: 30px;
+    top: -8px;
 }
 
 .burger__item:after {
-	width: 26px;
-	bottom: -8px;
+    width: 26px;
+    bottom: -8px;
 }
-
-
 
 
 @media (max-width: 991px) {
 
 
-.nav {
-	margin-top: -1px;
-	display: none;
-	width: 18%;
-	flex-direction: column;
-	position: absolute;
-	right: 0;
-	top: 100%;
-	text-align: right;
-	background-color: #313454;
+    .nav {
+        margin-top: -1px;
+        display: none;
+        width: 18%;
+        flex-direction: column;
+        position: absolute;
+        right: 0;
+        top: 100%;
+        text-align: right;
+        background-color: #313454;
+
+
+    }
+
+
+    .nav.show {
+        display: flex;
+    }
+
+    .nav__link {
+        padding: 9px 15px;
+    }
+
+
+    .burger {
+        display: block;
+    }
+
+
+    .intro__title {
+        font-size: 40px;
+    }
 
 
 }
-
-
-.nav.show{
-	display: flex;
-}
-
-.nav__link{
-	padding: 9px 15px;
-}
-
-
-.burger {
-	display: block;
-}
-
-
-.intro__title{
-	font-size: 40px;
-}
-
-
-}
-
 
 
 @media (max-width: 767px) {
 
 
-.intro{
-	height: auto;
-	padding-top: 130px;
-	padding-bottom: 35px;
-}
+    .intro {
+        height: auto;
+        padding-top: 130px;
+        padding-bottom: 35px;
+    }
 
-.intro__title {
-	font-size: 30px;
-	}
+    .intro__title {
+        font-size: 30px;
+    }
 
-.intro__subtitle{
-	margin-bottom: 30px;
+    .intro__subtitle {
+        margin-bottom: 30px;
 
-	font-size: 16px;
-}
+        font-size: 16px;
+    }
 
 }
 
