--- a/css/style.css
+++ b/css/style.css
@@ -149,13 +149,13 @@ p {
 
     padding-top: 15px;
     padding-bottom: 15px;
-    border-bottom: 1px solid # #2b2e49;
+    border-bottom: 1px solid #2b2e49;
 }
 
 .header__inner {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid # #2b2e49;
+    border-bottom: 1px solid #2b2e49;
     padding: 35px 0;
     align-items: center;
 
@@ -210,7 +210,7 @@ p {
     font-family: inherit;
     color: #fff;
     border: 1px;
-    text-shadow: 3px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
 
 }
 
@@ -489,7 +489,6 @@ p {
     width: 50%;
     margin: 0;
     padding: 0 0 10px;
-    letter-spacing: none;
 
     position: absolute;
     bottom: 0;
